add core structure for home page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running,running club,ireland,dublin">
-    <link rel="stylesheets" href="assets/css/style.css"
+    <link rel="stylesheets" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
 <body>
-    
+    <header>header content</header>
+    <section>
+        hero image
+    </section>
+    <section>
+        club etheos
+    </section>
+    <section>
+        running,locations,distance and times
+    </section>
+    <footer>
+        social midia
+    </footer>
 </body>
 </html>
