--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running,running club,ireland,dublin">
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
 
@@ -26,14 +26,18 @@
         </nav>
     </header>
     <section id="hero-outer">
-      <div id="hero-image"></div>
-      <div id="cover-text">
-          <h2>Love Running</h2>
-          <h3>Dublin Docklands & Phoenix Park</h3>
-      </div>
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
     </section>
-    <section>
-        club etheos
+    <section id="club-ethos">
+        <h1>Why Love Running With Us? </h1>
+        <div id="left-about">Left</div>
+        <div  id="right-about">Right</div>
+        <div  id="center-about">Center</div>
+
     </section>
     <section>
         running,locations,distance and times
