--- a/index.html
+++ b/index.html
@@ -119,7 +119,30 @@
 
     </section>
     <footer>
-        social midia
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page(opens in a new tab)"><i class="fab fa-twitter-square"></i></i></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page(opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+        </ul>
     </footer>
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/3ac1dca520.js" crossorigin="anonymous"></script>
