--- a/index.html
+++ b/index.html
@@ -119,28 +119,29 @@
 
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
             </li>
-        </ul>
-        <ul>
+
+
             <li>
                 <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page(opens in a new tab)"><i class="fab fa-twitter-square"></i></i></a>
+                    aria-label="Visit our twitter page(opens in a new tab)"><i
+                        class="fab fa-twitter-square"></i></i></a>
             </li>
-        </ul>
-        <ul>
+
+
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page(opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
             </li>
-        </ul>
-        <ul>
+
+
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page(opens in a new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
